--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,19 @@
 eclipse.preferences.version=1
+encoding//src/game/Game.java=UTF-8
+encoding//src/game/GameplayPanel.java=UTF-8
+encoding//src/game/Sujet.java=UTF-8
+encoding//src/game/UIPanel.java=UTF-8
+encoding//src/game/entities/Entity.java=UTF-8
+encoding//src/game/entities/GhostHouse.java=UTF-8
+encoding//src/game/entities/MovingEntity.java=UTF-8
+encoding//src/game/entities/PacGum.java=UTF-8
+encoding//src/game/entities/Pacman.java=UTF-8
+encoding//src/game/entities/StaticEntity.java=UTF-8
+encoding//src/game/entities/SuperPacGum.java=UTF-8
+encoding//src/game/entities/Wall.java=UTF-8
+encoding//src/game/entities/ghosts/Blinky.java=UTF-8
+encoding//src/game/entities/ghosts/Clyde.java=UTF-8
+encoding//src/game/entities/ghosts/Ghost.java=UTF-8
+encoding//src/game/entities/ghosts/Inky.java=UTF-8
+encoding//src/game/entities/ghosts/Pinky.java=UTF-8
 encoding/<project>=windows-1252
